# Swarm

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
notebooks/: gemini_test.ipynb
swarm/core/: gemini.py  hello.py
tests/core/: test_hello.py
